# matryoshka_cooc

./: .gitignore  LICENSE  README.md  pyproject.toml  visual_experiments.ipynb
checkpoints/gpt2-small_blocks.0.hook_resid_pre_6144_global-matryoshka-topk_32_0.0003_0/: config.json
graph_results/matryoshka/dataframes/: matryoshka_node_info_0_0.csv  matryoshka_node_info_1_5.csv
graph_results/resjb/dataframes/: resjb_node_info_0_0.csv  resjb_node_info_1_5.csv
src/matryoshka_cooc/: __init__.py  activation_store.py  activations_store_v2.py  activations_store_v3.py  main.py  sae_vis_v4.ipynb  subgraph_analysis.py  training.py
src/projects/: 1_train_gpt2_sae.py  2_get_cooc_mat_normal.py  3_generate_cooc_tables.py  backup.ipynb  compare_day_features.py  generate_cooc_tables.py  get_cooc_mat_normal.py  max_act.py  pca.py  subgraph_visualisation.py  train_gpt2_sae.py  train_gpt2_sae_wide.py  visualise_mat.py
src/projects/scratch/: max_act.py  subgraph_vis_v2.ipynb  visualise_mat.py
