[project]
name = "matryoshka-cooc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "sae-lens>=5.5.2",
    "torch>=2.6.0",
    "wandb>=0.19.7",
    "wormhole>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
