[project]
name = "matryoshka-cooc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaleido==0.2.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=5.24.1",
    "sae-lens>=5.5.2",
    "seaborn>=0.13.2",
    "textblob>=0.19.0",
    "torch>=2.6.0",
    "wandb>=0.19.7",
    "wormhole>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
